deploy/cluster/0001-search.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  selector:
    app: search
  ports:
    - port: 8280
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: $IMAGE
          ports:
            - containerPort: 80
          imagePullPolicy: $IMAGE_POLICY
$NODE_SELECTOR
